# batsim.rs

./: .gitignore  Cargo.lock.bak  Cargo.nix  Cargo.toml  LICENSE  README.md  batsim_rs.nix  crates-io.list  crates-io.nix  notes.md  result  shell.nix
docs/: search-index.js
docs/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
docs/batsim/: index.html  sidebar-items.js
docs/env_logger/: enum.LogTarget.html  fn.init.html  index.html  struct.LogBuilder.html  struct.Logger.html
docs/log/: enum.LogLevel.html  enum.LogLevelFilter.html  fn.max_log_level.html  fn.set_logger.html  fn.set_logger_raw.html  fn.shutdown_logger.html  fn.shutdown_logger_raw.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.log_enabled.html  macro.trace.html  macro.warn.html  struct.LogLocation.html  struct.LogMetadata.html  struct.LogRecord.html  struct.MaxLogLevelFilter.html  struct.SetLoggerError.html  struct.ShutdownLoggerError.html  trait.Log.html
docs/num_traits/: enum.FloatErrorKind.html  fn.clamp.html  index.html  struct.ParseFloatError.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumOps.html  trait.NumRef.html  trait.RefNum.html
docs/regex/: index.html  struct.CaptureMatches.html  struct.CaptureNames.html  struct.Captures.html  struct.Matches.html  struct.NoExpand.html  struct.Regex.html  struct.RegexBuilder.html  struct.RegexSetBuilder.html  struct.Split.html  (+3 more)
src/: FCFS.rs  batsim.rs  fcfs.rs  main.rs
(+501 files in other folders)
