[package]
name = "batsim-rs"
version = "0.1.0"
authors = [ "FAURE Adrien <adrien.faure2@gmail.com>" ]
readme = "README.md"
documentation = "https://adfaure.github.io/batsim.rs/interval_set/"
homepage = "https://gitlab.inria.fr/adfaure/procset.rs"
license = "MIT"
description = """
  API written in rust for the batsim - Batch scheduler simulator.
"""

[lib]
name = "batsim"
path = "src/libbatsim/lib.rs"

[dependencies]
zmq = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3.7"
env_logger = "0.4.3"
